FINAL UPDATE: changed modal position to fixed from absolute to remain fully covered for mobile at all times its open

--- a/src/Components/AddSubscriptionModal/AddSubscriptionModal.scss
+++ b/src/Components/AddSubscriptionModal/AddSubscriptionModal.scss
@@ -4,7 +4,7 @@
 .addsub__modal {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     padding: 1rem;
     display: flex;
